# takt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pixi.toml  pyproject.toml
docs/: CONCEPTUAL_MODEL.md  FALA_INTEGRATION.md
examples/code-cascade/: README.md
examples/document-cascade/: README.md
examples/fala-integration/: README.md  fala-package.toml  stdin.json
examples/fixtures/: cascade_evaluate.request.json  cascade_interlock.request.json  cascade_run.request.json
examples/multi-organ/: README.md
mojo/smoke/: cascade_sequencer.mojo  examples_plants.mojo  fala_stdio.mojo  full_smoke.mojo  fusion_fallback.mojo  plant_scan.mojo  regulator_evaluate.mojo
mojo/takt/: __init__.mojo  adapters_fala.mojo  builder.mojo  fusion.mojo  homeostat.mojo  json_lite.mojo  plant.mojo  regulator.mojo  sequencer.mojo  step_main.mojo  types.mojo
python/takt/: __init__.py  _build.py  _native.mojo  api.py
python/tests/: test_python_binding.py
src/takt/: __init__.py  builder.py  fusion.py  homeostat.py  plant.py  regulator.py  sequencer.py  types.py
tests/: test_cascade.py  test_splot_integration.py
tools/: mojo_run.sh  takt_step.sh
