[project]
name = "takt"
version = "0.2.0"
description = "Generic hierarchical cascade control engine (Mojo): plant scan → fusion → homeostat → actuation/interlock. Optional Fala subprocess step."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "mikolaj92" }]
dependencies = []
keywords = ["cascade", "homeostat", "cybernetics", "mojo", "regulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Mojo",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mikolaj92/takt"
Repository = "https://github.com/mikolaj92/takt"
Issues = "https://github.com/mikolaj92/takt/issues"
Changelog = "https://github.com/mikolaj92/takt/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Metadata-only Python package; product modules live under mojo/takt.
[tool.hatch.build.targets.wheel]
only-include = ["README.md"]

[dependency-groups]
mojo = [
  "mojo==1.0.0b3.dev2026071505; sys_platform != 'win32'",
]

[[tool.uv.index]]
name = "modular-nightly"
url = "https://whl.modular.com/nightly/simple/"
explicit = true
