[project]
name = "takt"
version = "0.2.0"
description = "Generic hierarchical cascade control engine (Mojo): plant scan → fusion → homeostat → actuation/interlock. Optional Fala subprocess step. Product lives under mojo/takt — not a Python runtime."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "mikolaj92" }]
dependencies = []
keywords = ["cascade", "homeostat", "cybernetics", "mojo", "regulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mikolaj92/takt"
Repository = "https://github.com/mikolaj92/takt"
Issues = "https://github.com/mikolaj92/takt/issues"
Changelog = "https://github.com/mikolaj92/takt/blob/main/CHANGELOG.md"
Download = "https://github.com/mikolaj92/takt/releases/tag/v0.2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Metadata-only Python package; product modules live under mojo/takt.
# Obtain the Mojo tree via git tag / GitHub source archive — not pip.
[tool.hatch.build.targets.wheel]
only-include = ["README.md", "LICENSE", "CHANGELOG.md"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pixi.toml",
  "pyproject.toml",
  "mojo",
  "tools",
  "examples",
  "docs",
]

[dependency-groups]
mojo = [
  "mojo==1.0.0b3.dev2026071505; sys_platform != 'win32'",
]

[[tool.uv.index]]
name = "modular-nightly"
url = "https://whl.modular.com/nightly/simple/"
explicit = true

[tool.uv.sources]
mojo = { index = "modular-nightly" }

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"
