[project]
name = "takt"
version = "0.3.0"
description = "Generic hierarchical cascade (Mojo) + thin optional Python binding."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "mikolaj92" }]
dependencies = []
keywords = ["cascade", "homeostat", "cybernetics", "mojo", "regulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mikolaj92/takt"
Repository = "https://github.com/mikolaj92/takt"
Issues = "https://github.com/mikolaj92/takt/issues"
Changelog = "https://github.com/mikolaj92/takt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/takt"]
force-include = { "mojo" = "mojo" }

[tool.hatch.build.targets.sdist]
include = [
  "python/takt",
  "mojo",
  "tools",
  "examples",
  "docs",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pixi.toml",
]

[dependency-groups]
dev = ["pytest>=8.0"]
mojo = [
  "mojo==1.0.0b3.dev2026071505; sys_platform != 'win32'",
]

[[tool.uv.index]]
name = "modular-nightly"
url = "https://whl.modular.com/nightly/simple/"
explicit = true

[tool.uv.sources]
mojo = { index = "modular-nightly" }

[tool.uv]
index-strategy = "unsafe-best-match"
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
